2000-02-24  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c [!STAGE1_5] (print_fsys_type): Mask
	CURRENT_SLICE with 0xFF when printing the partition type.

	* grub/asmstub.c [__linux__]: Include <linux/major.h> for the
	definition FLOPPY_MAJOR.
	(check_device) [__linux__]: Skip the HDIO_GETGEO ioctl if the
	major number of ST.ST_RDEV is FLOPPY_MAJOR.
	
2000-02-21  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (check_BSD_parts) [!STAGE1_5]: Use the term
	"BSD sub-partition" instead of "BSD slice" for consistency.

	* stage2/builtins.c (boot_func): Copy the partition table to
	BOOT_PART_TABLE instead of (BOOTSEC_LOCATION +
	BOOTSEC_PART_OFFSET). Don't use grub_memmove, but copy it
	directly, since memcheck is too strict.
	* stage2/disk_io.c (real_open_partition) [!STAGE1_5]: Set
	CUR_PART_ADDR to (BOOT_PART_TABLE + (i << 4)).
	* stage2/shared.h (BOOT_PART_TABLE): New macro.
	(chain_stage1): Change the types of all the arguments to
	unsigned long.
	(chain_stage2): Likewise.
	* grub/asmstub.c (chain_stage1): Adjusted to the prototype.
	(chain_stage2): Likewise.
	
2000-02-21  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/disk_io.c (check_BSD_parts) [!STAGE1_5]: If the BSD
	label is invalid, print a message with the partition type in the
	case where FLAGS is non-zero and DO_COMPLETION is zero.
	
2000-02-20  OKUJI Yoshinori  <okuji@gnu.org>

	* docs/user-ref.texi (Command-line-specific commands): Added a
	description about "cmp".
	* docs/appendices.texi (Reporting bugs): Rewritten.
	
2000-02-20  OKUJI Yoshinori  <okuji@gnu.org>

	Update the netboot code to Etherboot 4.4.3.
	
	* netboot/netboot_config.h: Copied from etherboot-4.4.3.
	* netboot/cs89x0.h: Likewise.
	* netboot/cs89x0.c: Likewise.
	* netboot/i82586.c: Likewise.
	* netboot/lance.c: Likewise.
	* netboot/linux-asm-string.h: Likewise.
	* netboot/nic.h: Likewise.
	* netboot/ntulip.c: Likewise.
	* netboot/osdep.h: Likewise.
	* netboot/pci.h: Likewise.
	* netboot/pci.c: Likewise.